<resources>
    <string name="app_name">Sudoku</string>
    <string name="main_title">Android Sudoku</string>
    <string name="continue_l">Continue</string>
    <string name="new_game_l">New Game</string>
    <string name="about_l">About</string>
    <string name="exit_l">Exit</string>
    <string name="about_title">About Android Sudoku</string>
    <string name="about_text">\
        Sudoku is a logic-based number placement puzzle.
        Starting with partially filled 9*9 grid, the objective is to fill
        the grid so that each row, each column, and each of the 3*3 boxes
        (also called <i>blocks</i>) contains the digits 1 to 9 exactly ones.
    </string>
    <string name="feedBack_l">Send Feedback</string>
    <string name="settings_l">Settings...</string>
    <string name="setting_title">Sudoku settings</string>
    <string name="setting_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hint_title">Hints</string>
    <string name="hint_summary">Show hints during play</string>

    <string name="new_game_title">Difficulty</string>
    <string name="easy_l">Easy</string>
    <string name="medium_l">Medium</string>
    <string name="hard_l">Hard</string>
    <array name="difficulty">
        <item>@string/easy_l</item>
        <item>@string/medium_l</item>
        <item>@string/hard_l</item>
    </array>

    <string name="game_title">Game</string>
    <string name="no_move_l">No Moves</string>
    <string name="keypad_title">Keypad</string>

</resources>
