<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="30dp"
    android:background="@color/background"
    tools:context="com.example.sudoku.Sudoku">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:textSize="30sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_l"
        android:padding="@dimen/dp_20"
        android:id="@+id/continue_b"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game_l"
        android:padding="@dimen/dp_20"
        android:id="@+id/new_game_b"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_l"
        android:padding="@dimen/dp_20"
        android:id="@+id/about_b"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_l"
        android:padding="@dimen/dp_20"
        android:id="@+id/exit_b"
        />
</LinearLayout>
</LinearLayout>
